Macro to fetch the jar version